[project]
authors = [
    {name = "Richard Abrich", email = "richard@openadapt.ai"},
]
requires-python = "<3.14,>=3.10"
dependencies = [
    "alembic==1.8.1",
    "black<25.0.0,>=24.8.0",
    "pygetwindow<0.0.5; sys_platform == \"win32\"",
    "pywin32==306; sys_platform == \"win32\"",
    "xcffib==1.5.0; sys_platform == \"linux\"",
    "ascii-magic==2.3.0",
    "bokeh==2.4.3",
    "clipboard==0.0.4",
    "deepdiff[optimize]<7.0.0,>=6.3.0",
    "ascii-magic==2.3.0",
    "dictalchemy3==1.0.0",
    "fire==0.4.0",
    "ipdb==0.13.11",
    "loguru==0.6.0",
    "matplotlib==3.6.2",
    "mss==6.1.0",
    "openai<2.0.0,>=1.51.0",
    "pandas==2.0.0",
    "presidio-analyzer==2.2.32",
    "presidio-anonymizer==2.2.32",
    "pytesseract==0.3.7",
    "pytest==7.1.3",
    "rapidocr-onnxruntime==1.2.3",
    "scikit-learn==1.2.2",
    "scipy<2.0.0,>=1.11.0",
    "torch<3.0.0,>=2.0.0",
    "tqdm==4.64.0",
    "transformers==4.29.2",
    "python-dotenv==1.0.0",
    "pyinstaller==6.11.0",
    "setuptools-lint<1.0.0,>=0.6.0",
    "sphinx==7.0.1",
    "spacy<4.0.0,>=3.5.3",
    "fuzzywuzzy==0.18.0",
    "segment-anything<2.0,>=1.0",
    "torchvision<1.0.0,>=0.15.2",
    "sumy==0.11.0",
    "nltk==3.8.1",
    "pillow<11.0.0,>=10.4.0",
    "pywinauto<1.0.0,>=0.6.8; sys_platform == \"win32\"",
    "flake8<7.0.0,>=6.0.0",
    "flake8-docstrings<2.0.0,>=1.7.0",
    "moviepy==1.0.3",
    "python-levenshtein<1.0.0,>=0.21.1",
    "magic-wormhole==0.12.0",
    "pyside6<7.0.0.0,>=6.5.1.1",
    "flake8-annotations<4.0.0,>=3.0.1",
    "pre-commit<4.0.0,>=3.3.3",
    "pympler<2.0.0,>=1.0.1",
    "psutil<6.0.0,>=5.9.5",
    "sentry-sdk<2.0.0,>=1.28.1",
    "gitpython<4.0.0,>=3.1.32",
    "pyobjc-framework-avfoundation<10.0,>=9.2; sys_platform == \"darwin\"",
    "fastapi<1.0.0,>=0.111.1",
    "screen-recorder-sdk<2.0.0,>=1.3.0; sys_platform == \"win32\"",
    "pyaudio<1.0.0,>=0.2.13; sys_platform == \"win32\"",
    "oa-atomacos==3.2.0; sys_platform == \"darwin\"",
    "presidio-image-redactor<1.0.0,>=0.0.48",
    "pywebview<5.0.0,>=4.2.2",
    "click<9.0.0,>=8.1.6",
    "spacy-transformers<2.0.0,>=1.2.5",
    "boto3<2.0.0,>=1.28.30",
    "botocore<2.0.0,>=1.31.30",
    "easyocr<2.0.0,>=1.7.0",
    "spacy-curated-transformers<1.0.0,>=0.2.0",
    "anthropic<1.0.0,>=0.34.2",
    "orjson<4.0.0,>=3.9.15",
    "replicate<1.0.0,>=0.25.0",
    "gradio-client==0.15.0",
    "google-generativeai<1.0.0,>=0.5.0",
    "uvicorn[standard]<1.0.0,>=0.30.0",
    "ultralytics<9.0.0,>=8.1.47",
    "imagehash<5.0.0,>=4.3.1",
    "pydantic-settings<3.0.0,>=2.2.1",
    "pyqt-toast-notification<2.0.0,>=1.1.0",
    "pudb<2025.0,>=2024.1",
    "sounddevice<1.0.0,>=0.4.6",
    "soundfile<1.0.0,>=0.12.1",
    "posthog<4.0.0,>=3.5.0",
    "wheel<1.0.0,>=0.43.0",
    "cython<4.0.0,>=3.0.10",
    "av<13.0.0,>=12.3.0",
    "beautifulsoup4<5.0.0,>=4.12.3",
    "dtaidistance<3.0.0,>=2.3.12",
    "tokencost<1.0.0,>=0.1.12",
    "numba<1.0.0,>=0.60.0",
    "llvmlite<1.0.0,>=0.43.0",
    "ell-ai<1.0.0,>=0.0.14",
    "pynput<2.0.0,>=1.7.7",
    "multiprocessing-utils<1.0,>=0.4",
]
name = "openadapt"
version = "0.43.1"
description = "GUI Process Automation with Transformers"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"

[project.urls]
"Bug Tracker" = "https://github.com/OpenAdaptAI/OpenAdapt/issues"
homepage = "https://openadapt.ai/"
repository = "https://github.com/OpenAdaptAI/OpenAdapt"

[project.scripts]
visualize = "openadapt.visualize:main"
record = "openadapt.record:start"
replay = "openadapt.replay:start"
app = "openadapt.app.tray:_run"
reset = "openadapt.scripts.reset_db:reset_db"
capture = "openadapt.capture:test"
postinstall = "scripts.postinstall:main"
[tool.black]
line-length = 88
extend-exclude = '''
/(
    venv
  | .venv
  | .cache
  | alembic
  | contrib
  | __pycache__
)/
'''

[tool.semantic_release]
version_variable = ["openadapt/__init__.py:__version__"]
major_on_zero = false
branch = "main"
commit_subject = "chore(release): v{version}"
commit_version_number = true
upload_to_PyPI = true
upload_to_release = true
upload_to_repository = false
repository_url = "https://upload.pypi.org/legacy/"
build_command = "uv publish"
